fix design bg errors in grid alignment

--- a/src/css/markets.css
+++ b/src/css/markets.css
@@ -1,10 +1,10 @@
-/*body {
+body {
     background-image: none;
     background-position: 0;
     background-size: 0;
     background-repeat: no-repeat;
     background-color: #ffffff;
-}*/
+}
 
 a, a:hover {
     color: #000000;
